# pyorm

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  settings.py  tests.py
db/: connection.py  migrations.py
db/managers/: base.py
db/models/: __init__.py  base.py  fields.py  migration.py  users.py
migrations/: 0001_initial.py  0002_create_users.py
services/: migrate.py  util.py
