[tool.poetry]
name = "pyorm"
version = "0.1.0"
description = ""
authors = ["borodulin_da <cool.dmitricus@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
envparse = "^0.2.0"
psycopg2 = "^2.9.2"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
